# giza-pp

./: CMakeLists.txt
GIZA++-v2/: .gitignore  CMakeLists.txt  Makefile  Parameter.cpp  Parameter.h  TTables.h  Vector.h  main.cpp  model1.cpp  mystl.h
compat/: CMakeLists.txt  compat.h  math.cpp  str.cpp
mkcls-v2/: .gitignore  CMakeLists.txt  KategProblemKBC.cpp  Makefile  general.cpp  mkcls.cpp  myleda.h  mystl.h
