CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(giza)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_POSIX_ /wd4996")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W3 /wd4996")

# INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} compat/win)

ADD_SUBDIRECTORY(compat)
ADD_SUBDIRECTORY(GIZA++-v2)
ADD_SUBDIRECTORY(mkcls-v2)
